namespace ExpenseTracker.Domain;

public enum MatchType
{
    Contains,
    Regex,
    StartsWith,
    Equals
}